Add README, modify service, add H2 database